# nest-editor

./: .gitignore  Cargo.toml  TODO.md
crates/nest_editor/: Cargo.toml
crates/nest_editor/src/: editor_app_utils.rs  editor_camera.rs  main.rs  raw_app_wrapper.rs  test_systems.rs  utils.rs  winit_app_utils.rs
crates/nest_editor/src/user_project/: mod.rs  user_app.rs  user_lib_wrapper.rs
crates/nest_editor/src/view/: mod.rs
crates/nest_editor_macro/: Cargo.toml
crates/nest_editor_macro/src/: lib.rs
crates/nest_editor_shared/: Cargo.toml
crates/nest_editor_shared/src/: in_game_editor.rs  lib.rs  scene_manager.rs  view.rs
crates/nest_editor_shared/src/view/: hierarchy.rs  mod.rs  project.rs
examples/example_bevy_project/: Cargo.toml
examples/example_bevy_project/assets/models/: Circle.glb
examples/example_bevy_project/assets/scenes/: default.scn.ron  main.scn.ron
examples/example_bevy_project/src/: lib.rs  main.rs
nest_editor/: Cargo.toml
nest_editor/src/: main.rs  test_systems.rs  utils.rs
nest_editor/src/view/: mod.rs
