[package]
name = "nest_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = [ "serialize", "reflect_functions", "bevy_scene" ] }
bevy_reflect = "0.15.3"
bevy_winit = "0.15.3"
bevy_input = "0.15.3"
bevy_egui = "0.33.0"
egui_dock = "0.16.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
bevy-inspector-egui = "0.30.0"
libloading = "0.8.6"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
nest_editor_shared = { path = "../nest_editor_shared" }
uuid = "*"
serde_json = "1.0.140"

log = "0.4.27"
