[package]
name = "nest_editor_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = [ "serialize", "reflect_functions" ] }
bevy_egui = "0.33.0"
egui_dock = "0.16.0"
serde_json = "1.0.140"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }