[package]
name = "nest_editor_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = [ "serialize", "reflect_functions" ] }

# Egui
bevy_egui = "0.33.0"
egui_dock = "0.16.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
bevy-inspector-egui = "0.30.0"

# Other
serde_json = "1.0.140"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }